--- a/style.css
+++ b/style.css
@@ -42,6 +42,7 @@ body {
               display: flex;
               justify-content: space-between;
               align-items: center;
+              padding: 25px 0 24px 0;
 }
 
 .header_top_left {
@@ -63,7 +64,7 @@ body {
 }
 
 .icon {
-              padding: 25px 13px 24px 0;
+              padding-right: 13px;
 }
 
 .link {
@@ -71,29 +72,67 @@ body {
 }
 
 .brand {
-              padding: 45px 0 36px 0;
+              padding-top: 5px;
 }
 
 .browse {
-  width: 87px;
+  width: 91px;
   border: solid 1px #e6e6e6;
   background-image: linear-gradient(to top, #f9f9f9, #f5f5f5);
   box-sizing: border-box;
+  display: flex;
+  flex-direction: row;
 }
 
 .browse_text {
   color: #222222;
   padding: 14px;
   line-height: 10px;
+  list-style: none;
 }
 
-.browse_text::after {
+.browse[open] .browse_text::after {
   content: "";
   border-style: solid;
   border-width: 6px 4.5px 0 4.5px;
   border-color: #838383 transparent transparent transparent;
   margin-left: 8px;
   vertical-align: -10px;
+  display: inline;
+}
+
+.browse_text::after {
+  content: "";
+  border-style: solid;
+  border-width: 4.5px 0 4.5px 6px;
+  border-color: transparent transparent transparent #838383;
+  margin-left: 8px;
+  display: inline-block;
+}
+
+.browse_box {
+  border-radius: 5px;
+  background-color: #ffffff;
+  border: 1px solid #e8e8e8;
+  padding: 20px;
+  position: absolute;
+  top: 70px;
+  z-index: 1;
+}
+
+.browse_box::before {
+  content: "";
+  display: block;
+  width: 12px;
+  height: 12px;
+  background-color: aqua;
+  position: absolute;
+  top: -7px;
+  left: 65px;
+  transform: rotate(45deg);
+  border-top: 1px solid #e8e8e8;
+  border-left: 1px solid #e8e8e8;
+  background-color: #fff;
 }
 
 .search {
@@ -296,6 +335,7 @@ body {
   line-height: 28px;
   display: block;
 }
+
 .mega-link:hover {
   color: #f16d7f;
 }
@@ -310,7 +350,7 @@ body {
 }
 
 .mega-hedding {
-  color: #646464;
+  color: #232323;
   font-size: 14px;
   font-weight: 400;
   text-transform: uppercase;
@@ -318,6 +358,8 @@ body {
   width: 235px;
   padding: 8px;
   margin: 8px;
+  padding-left: unset;
+  margin-left: unset;
 }
 
 .mega-item {
@@ -417,15 +459,50 @@ body {
   width: 263px;
   height: 364px;
   background-color: #ffffff;
-  display: flex;
-  flex-direction: column;
+  display: block;
   margin-bottom: 30px;
+  position: relative;
+  overflow: hidden;
+}
+
+.product_box:hover {
+  box-shadow: 0px 5px 8px 0 rgba(0, 0, 0, 0.16);
+}
+
+.product_box:hover::after{
+  content: "";
+  position: relative;
+  box-shadow: 150px -232px 0 150px rgba(0, 0, 0, 0.6);
 }
 
 .product_box_img {
   display: block;
   width: 100%;
   height: 282px;
+}
+
+.product_button {
+  display: none;
+  position: absolute;
+  background-color: transparent;
+  border: solid 1px #ffffff;
+  top: 97px;
+  left: 63px;
+  padding: 10px;
+}
+
+.product_button_text {
+  font-size: 13px;
+  font-weight: bold;
+  color: #ffffff;
+  line-height: 29px;
+  margin-left: 8px;
+}
+
+.product_box:hover .product_button {
+  display: flex;
+  filter: brightness(0) invert(1);
+  z-index: 1;
 }
 
 .text_box {
@@ -471,7 +548,7 @@ body {
 .feature_img {
   background-image: url(img/banner_back.png);
   width: 767px;
-  background-size: 100%;
+  background-size: 100% 100%;
 }
 
 .feature_info {
@@ -518,6 +595,228 @@ body {
 .subscribe {
   background-image: url(img/subscribe_back.png);
   background-repeat: no-repeat;
-  background-size: 100%;
-  height: 600px;
+  background-size: 100% 100%;
+  height: 438px;
+  margin-bottom: 85px;
+}
+
+.comment {
+  width: 500px;
+  margin-top: 111px;
+  float: left;
+}
+
+.comment_img {
+  margin-right: 28px;
+  display: inline;
+  float: left;
+}
+
+.comment_text {
+  font-style: italic;
+  font-size: 16px;
+  letter-spacing: 0.4px;
+  color: #222224;
+  padding-top: 12px;
+}
+
+.figcap {
+  padding: unset;
+  padding-top: 12px;
+  margin-left: 111px;
+}
+
+.figcap_text_pink {
+  font-size: 16px;
+  font-weight: bold;
+  color: #f16d7f;
+}
+
+.figcap_text {
+  font-size: 12px;
+  font-weight: 300;
+  letter-spacing: 0.3px;
+  color: #222224;
+}
+
+.subscribe_slider {
+  display: flex;
+  justify-content: space-between;
+  clear: both;
+  width: 140px;
+  margin-left: 111px;
+  padding-top: 41px;
+}
+
+.subscribe_slider_block {
+  width: 38px;
+  height: 4px;
+  background-color: #d6d6d6;
+}
+
+.subscribe_line {
+  width: 1px;
+  background-color: #ffffff;
+  height: 438px;
+  position: absolute;
+  left: 570px;
+}
+
+.subscribe_flex {
+  display: flex;
+  justify-content: space-between;
+  position: relative;
+}
+
+.subscribe_right {
+  display: flex;
+  flex-direction: column;
+  padding: 148px 92px;
+}
+
+.subscribe_title {
+  font-size: 24px;
+  letter-spacing: 0.6px;
+  text-transform: uppercase;
+  text-align: center;
+  margin-bottom: 6px;
+}
+
+.subscribe_text {
+  font-weight: normal;
+  text-align: center;
+}
+
+.subscribe_form {
+  height: 46px;
+  display: flex;
+  margin-top: 35px;
+}
+
+.email {
+  height: 100%;
+  width: 230px;
+  border: none;
+  background-color: #e1e1e1;
+  border-top-left-radius: 23px;
+  border-bottom-left-radius: 23px;
+  padding: 0 28px;
+  outline: none;
+}
+
+.email::placeholder {
+  opacity: 0.67;
+  font-size: 14px;
+  letter-spacing: 0.35px;
+  color: rgba(34, 34, 36, 0.67);
+}
+
+.subscribe_button {
+  border: none;
+  padding: 18px 20px;
+  border-top-right-radius: 23px;
+  border-bottom-right-radius: 23px;
+  font-size: 14px;
+  letter-spacing: 0.35px;
+  color: #ffffff;
+  line-height: 10px;
+}
+
+.footer_top {
+  display: flex;
+  flex-direction: row;
+}
+
+.footer_text {
+  width: 430px;
+  margin-top: 30px;
+}
+
+.footer_hedding {
+  font-size: 18px;
+  font-weight: bold;
+  letter-spacing: 0.45px;
+  color: #f16d7f;
+  text-transform: uppercase;
+  margin-bottom: 35px;
+}
+
+.footer_top_right {
+  display: flex;
+  padding-top: 10px;
+  margin-left: 63px;
+}
+
+.footer_info {
+  margin-right: 137px;
+  white-space: nowrap;
+}
+
+.footer_link {
+  font-size: 16px;
+  letter-spacing: 0.4px;
+  color: #898989;
+  text-decoration: none;
+}
+
+.footer_link:hover {
+  color: #f16d7f;
+}
+
+.footer_list {
+  list-style-type: none;
+}
+
+.footer_list li {
+  margin-bottom: 20px;
+}
+
+.footer_list li:last-of-type {
+  margin-bottom: unset;
+}
+
+.footer_bottom {
+  margin-top: 89px;
+  padding: 24px 0;
+  background-color: #e6e6e6;
+}
+
+.footer_flex {
+  display: flex;
+  justify-content: space-between;
+}
+
+.copyright {
+  font-size: 16px;
+  letter-spacing: 0.4px;
+  color: #7a7a7a;
+  padding: 8px 0;
+}
+
+.contacts {
+  display: flex;
+}
+
+.contact_block {
+  width: 32px;
+  height: 32px;
+  margin-right: 8px;
+  object-fit: contain;
+  background-color: #ffffff;
+}
+
+.contact_block:last-of-type {
+  margin-right: unset;
+}
+
+.contact_block:hover {
+  background-color: #f16d7f;
+}
+
+.contact_block:hover .contact_img {
+  filter: brightness(0) invert(1);
+}
+
+.contact_img {
+  padding: 50% 50%;
 }
