--- a/style.css
+++ b/style.css
@@ -982,3 +982,227 @@ body {
 .contacts i:hover {
   color: #f16d7f;
 }
+
+.new_arrivals {
+  background-color: #f8f3f4;
+}
+
+.new_arrivals_flex {
+  display: flex;
+  justify-content: space-between;
+}
+
+.new_arrivals_title {
+  font-size: 24px;
+  font-weight: 900;
+  color: #f16d7f;
+  text-transform: uppercase;
+  padding: 65px 0;
+}
+
+.new_arrivals_text {
+  font-size: 14px;
+  font-weight: 300;
+  color: #636363;
+  text-transform: uppercase;
+}
+
+.new_arrivals_text_pink {
+  font-weight: bold;
+  color: #f16d7f;
+}
+
+.new_arrivals_textblock {
+  padding: 69px 0;
+}
+
+.slider {
+  height: 777px;
+  border: solid 1px #eaeaea;
+  background-color: #f7f7f7;
+  background-image: url(img/slider_img.png);
+  background-repeat: no-repeat;
+  background-position: center;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.slider_block {
+  width: 47px;
+  height: 47px;
+  background-color: #2a2a2a;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.slider_block i {
+  font-size: 24px;
+  color: #ffffff;
+}
+
+.product_description_box {
+  position: relative;
+  top: -44px;
+  z-index: 1;
+  background-color: #ffffff;
+  border: solid 1px #eaeaea;
+}
+
+.product_description_collection {
+  font-size: 14px;
+  font-weight: bold;
+  text-align: center;
+  color: #f16d7f;
+  text-transform: uppercase;
+  margin-top: 73px;
+  margin-bottom: 15px;
+}
+
+.product_descripion_line {
+  width: 147px;
+  height: 1px;
+  border: solid 1px #eaeaea;
+  background-color: #eaeaea;
+  margin: 0 auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.line_pink {
+  width: 63px;
+  height: 3px;
+  background-color: #ef5b70;
+  border: solid 1px #ef5b70;
+}
+
+.product_description_title {
+  font-size: 18px;
+  font-weight: 900;
+  text-align: center;
+  color: #4d4d4d;
+  text-transform: uppercase;
+  margin-top: 18px;
+  margin-bottom: 67px;
+}
+
+.product_description_text {
+  width: 618px;
+  text-align: center;
+  color: #5e5e5e;
+  margin: 0 auto;
+}
+
+.product_description_info {
+  display: flex;
+  justify-content: center;
+  margin-top: 28px;
+  margin-bottom: 37px;
+}
+
+.product_description_info_left {
+  margin-right: 44px;
+}
+
+.product_description_info_text {
+  font-size: 14px;
+  font-weight: bold;
+  color: #b9b9b9;
+  text-transform: uppercase;
+}
+
+.product_description_info_text_black {
+  color: #2f2f2f;
+}
+
+.product_description_cost {
+  font-size: 24px;
+  font-weight: bold;
+  text-align: center;
+  color: #ef5b70;
+}
+
+.line_grey {
+  width: 642px;
+  height: 1px;
+  border: solid 1px #eaeaea;
+  margin: 43px auto 63px auto;
+}
+
+.product_description_characteristics {
+  display: flex;
+  justify-content: space-between;
+  width: 537px;
+  margin: 0 auto;
+  margin-bottom: 28px;
+}
+
+.product_choose {
+  width: 144px;
+  height: 35px;
+  margin-top: 16px;
+  border: solid 1px #eaeaea;
+  background-color: #ffffff;
+  font-size: 13px;
+  color: #bcbcbc;
+  padding-left: 14px;
+  -moz-appearance: none;
+  background-image: url(img/charact_arrow.png);
+  background-repeat: no-repeat;
+  background-position: 126px;
+}
+
+.product_quantity {
+  width: 144px;
+  height: 35px;
+  margin-top: 16px;
+  border: solid 1px #eaeaea;
+  background-color: #ffffff;
+  font-size: 13px;
+  color: #bcbcbc;
+  padding-left: 14px;
+  -moz-appearance: textfield;
+  box-sizing: border-box;
+}
+
+.button_add_to_cart {
+  width: 537px;
+  border: solid 1px #ef5b70;
+  background-color: #ffffff;
+  font-size: 16px;
+  font-weight: bold;
+  color: #ef5b70;
+  padding: 16px;
+  transform: translate(50%);
+  margin-bottom: 122px;
+}
+
+.button_add_to_cart::before {
+  content: url(img/cart_pink.svg);
+  margin-right: 15px;
+  vertical-align: -25%;
+}
+
+.like_also {
+  margin-top: 119px;
+}
+
+.like_also_title {
+  font-size: 24px;
+  font-weight: 900;
+  text-align: center;
+  color: #4d4d4d;
+  text-transform: uppercase;
+}
+
+.like_also_img_box {
+  width: 100%;
+  height: 280px;
+  background-color: #e9e9e9;
+  background-size: 100%;
+  display: flex;
+  justify-content: center;
+}
+
