--- a/style.css
+++ b/style.css
@@ -1467,6 +1467,10 @@ input[type='radio'] {
   color: #575757;
 }
 
+.shopping_cart_product_details_text:hover {
+  color: #f16d7f;
+}
+
 .shopping_cart_product_text_grey {
   font-weight: 300;
   color: #6f6e6e;
@@ -1634,3 +1638,335 @@ input[type='radio'] {
   color: #f16d7f;
   background-color: #ffffff;
 }
+
+.product_main {
+  margin-top: 59px;
+  margin-bottom: 110px;
+  display: flex;
+  justify-content: space-between;
+}
+
+.product_aside_details {
+  width: 243px;
+  margin-bottom: 18px;
+  display: flex;
+  flex-direction: row;
+}
+
+.product_aside_details[open] .product_summary::after {
+  content: "";
+  border-style: solid;
+  border-width: 0 4.5px 6px 4.5px;
+  border-color: transparent transparent #ef5b71 transparent;
+  margin-left: auto;
+  margin-right: 6px;
+  display: inline-block;
+}
+
+.product_aside_details[open] {
+  padding-bottom: 14px;
+}
+
+.product_summary {
+  list-style: none;
+  border-bottom: solid 1px #ebebeb;
+  display: flex;
+  align-items: center;
+}
+
+.product_summary::before {
+  content: "";
+  border-style: solid;
+  border-width: 37px 5px 0 0;
+  margin-right: 11px;
+  border-color: #ef5b70;
+  display: inline-block;
+  vertical-align: middle;
+}
+
+.product_summary::after {
+  content: "";
+  border-style: solid;
+  border-width: 6px 4.5px 0 4.5px;
+  border-color: #838383 transparent transparent transparent;
+  margin-left: auto;
+  margin-right: 6px;
+  display: inline;
+}
+
+.product_aside_details_link {
+  font-size: 14px;
+  color: #6f6e6e;
+  text-decoration: none;
+  margin-top: 22px;
+  margin-left: 16px;
+  display: block;
+}
+
+.product_aside_details_link:hover {
+  color: #f16d7f;
+}
+
+.product_aside_details_link:last-of-type {
+  margin-bottom: 23px;
+}
+
+.product_search {
+  width: 846px;
+  margin-top: 14px;
+}
+
+.product_search_top {
+  display: flex;
+  justify-content: space-between;
+}
+
+.product_search_title {
+  font-size: 14px;
+  font-weight: bold;
+  color: #6f6e6e;
+  text-transform: uppercase;
+  margin-bottom: 25px;
+}
+
+.trending_now_text {
+  font-size: 14px;
+  color: #6f6e6e;
+}
+
+.trending_now_textbox .trending_now_text:hover {
+  color: #f16d7f;
+}
+
+.trending_now_line {
+  width: 0;
+  height: 10px;
+  border: 1px solid #dfdfdf;
+  display: inline-block;
+  margin-left: 8px;
+  margin-right: 8px;
+}
+
+.trending_now_textbox {
+  margin-bottom: 6px;
+}
+
+.checkbox_container {
+  display: block;
+  cursor: pointer;
+  font-size: 14px;
+  color: #6f6e6e;
+  text-transform: uppercase;
+  position: relative;
+  padding-left: 6px;
+  margin-right: 23px;
+}
+
+.checkbox_container:hover .checkmark_size {
+  border-color: #f16d7f;
+}
+
+.checkbox_size {
+  opacity: 0;
+}
+
+.checkmark_size {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 12px;
+  width: 12px;
+  background-color: #ffffff;
+  border: 1px solid #ebebeb;
+  margin-top: 1px;
+}
+
+.checkmark_size::after {
+  content: "";
+  display: none;
+  position: absolute;
+  top: -2px;
+  left: 2px;
+  width: 5px;
+  height: 10px;
+  border: solid #f16d7f;
+  border-width: 0 3px 3px 0;
+  transform: rotate(45deg);
+}
+
+.checkbox_size:checked ~ .checkmark_size::after {
+  display: block;
+}
+
+.checkbox_row {
+  display: flex;
+  flex-direction: row;
+  margin-bottom: 13px;
+}
+
+#product_range {
+  width: 262px;
+  height: 6px;
+  border-radius: 3px;
+  background-color: #f0f0f0;
+}
+
+#product_range::-moz-range-progress {
+  height: 6px;
+  background-color: #f16d7f;
+}
+
+.product_range_slider::-moz-range-thumb {
+  width: 14px;
+  height: 14px;
+  border: none;
+  cursor: pointer;
+  background-color: #f16d7f;
+}
+
+.product_range_output {
+  position: absolute;
+}
+
+.product_sort {
+  display: flex;
+  padding: 10px;
+  background-color: #f3f3f3;
+  margin-top: 29px;
+  margin-bottom: 40px;
+}
+
+.product_sort_block {
+  display: flex;
+  justify-content: space-between;
+  padding: 10px 13px;
+  line-height: 18px;
+  border: solid 1px #ebebeb;
+  background-color: #ffffff;
+}
+
+.product_sort_select {
+  width: 86px;
+  border: solid 1px #ebebeb;
+  padding: 10px;
+  -moz-appearance: none;
+  margin-right: 10px;
+}
+
+.product_sort_select_wrapper {
+  position: relative;
+}
+
+.product_sort_select_wrapper::after {
+  content: "";
+  position: absolute;
+  top: 17px;
+  left: 68px;
+  border-style: solid;
+  border-width: 6px 4.5px 0 4.5px;
+  border-color: #838383 transparent transparent transparent;
+  margin-left: auto;
+  margin-right: 6px;
+  display: inline;
+}
+
+.product_search_bottom {
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-end;
+}
+
+.product_sort_button {
+  text-transform: unset;
+  padding: 16px 46px;
+  margin: unset;
+}
+
+.product_sort_feature {
+  max-width: 1609px;
+  padding: 90px 256px 114px;
+  background-color: #222224;
+  box-sizing: border-box;
+  display: flex;
+  justify-content: space-between;
+}
+
+.page_navigation {
+  padding: 16px;
+  border: solid 1px #ebebeb;
+  background-color: #ffffff;
+
+}
+
+.pagination {
+  display: flex;
+  list-style: none;
+  height: 17px;
+  font-size: 0;
+}
+
+.pagination i {
+  font-size: 14px;
+  color: #aaaaaa;
+}
+
+.page_item {
+  display: inline-block;
+  margin-right: 16px;
+}
+
+.page_item:last-of-type {
+  margin: unset;
+}
+
+.page_link {
+  text-decoration: none;
+  font-size: 16px;
+  font-weight: 300;
+  color: #c4c4c4;
+}
+
+.page_link:hover {
+  color: #ef5b70;
+}
+
+.page_link i:hover {
+  color: #ef5b70;
+}
+
+.page_dots {
+  margin: unset;
+}
+
+.page_dots::after {
+  content: ".....";
+  font-size: 16px;
+  font-weight: 300;
+  color: #c4c4c4;
+}
+
+.page_active {
+  color: #ef5b70;
+}
+
+.product_feature_text {
+  margin: unset;
+  max-width: 321px;
+}
+
+.product_feature_hedding {
+  text-align: center;
+  margin-top: 32px;
+  margin-bottom: 16px;
+}
+
+.feature_item {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+}
+
+.product_feature_img {
+  margin: 0 auto;
+}
+
